# rust-bitcoin

bitcoin/: Cargo.toml
bitcoin/src/: lib.rs
bitcoin/src/blockdata/: transaction.rs  witness.rs
bitcoin/src/blockdata/script/: borrowed.rs  builder.rs  owned.rs  tests.rs
bitcoin/src/consensus/: encode.rs
